# learn-lvgl

./: readme.md
arduino/ESP32_TFT_eSPI_Slider/: ESP32_TFT_eSPI_Slider.ino
arduino/external_button/: external_button.ino
arduino/keyboard_input/: KEYBOARD_INPUT.ino
arduino/rotery_encoder_input/: rotery_encoder_input.ino
arduino/task_with_interrupt/: task_with_interrupt.ino
esp32/: sdkconfig_custom_ili9488  sdkconfig_wrover_kit_v1.4.1
esp32/main/: CMakeLists.txt  _1_external_button_on_screen.c  _3_keyboard_on_chip.c  _4_rotary_encoder.c  _5_rotary_encoder_button.c  _6_task_with_rtos.c  _7_task_with_rtos_semaphore.c  main.c
simulator/: course_main.c  course_main.h
simulator/completed/_2_styles/: _3_styles_local.c  _4_styles_parts.c
simulator/completed/_3_img_and_font/: _6_canvas.c
simulator/completed/_5_grp_and_inputs/: _2_keyboard_with_group.c  _3_keyboard_on_chip.c  _4_encoder_on_chip.c  _5_groups_more.c  _6_text_input.c
simulator/completed/_6_tasks/: _6_task.c
simulator/excercise/_1_widgets/: _1_base_obj.c  _4_containers.c  _6_display_widgets.c
simulator/excercise/_4_animation/: animation.c
simulator/excercise/_5_grp_and_inputs/: _1_external_button_on_screen.c  _3_keyboard_on_chip.c  (+4 more)
simulator/resources/: weather_20.c  yellow_tail_30.c
simulator_mac_os_platfor_io/: course_main.c  course_main.h
simulator_mac_os_platfor_io/resources/: weather_20.c  yellow_tail_30.c
simulator_vs/: course_main.c  course_main.h
simulator_vs/resources/: weather_20.c  yellow_tail_30.c
simulator_vs/simulator_drivers/: simulator_drivers.c  simulator_drivers.h
(+58 files in other folders)
